@@ -132,7 +132,7 @@ Errors, verbose and debug output are printed to stderr when verbose output \-v i
 Verbose and debug output are only printed when enabled at compilation.
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-http://code.google.com/p/liblnk/
+https://github.com/libyal/liblnk/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
